force-app/main/default/objects/Customer_Credit__c/Customer_Credit__c.object-meta.xml
<CustomObject>
    <label>Customer_Credit</label>
    <nameField>
        <label>Customer_Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer_Credits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>