force-app/main/default/objects/Customer_Credit__c/fields/Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Amount__c</fullName>
    <label>Available_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>