force-app/main/default/objects/Customer_Credit__c/fields/Created_By_Process__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created_By_Process</label>
    <type>Checkbox</type>
</CustomField>