force-app/main/default/objects/Customer_Credit__c/fields/Is_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Is_Redeemed__c</fullName>
    <formula>IF( Available_Amount__c = 0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Redeemed</label>
    <type>Checkbox</type>
</CustomField>