force-app/main/default/objects/Customer_Credit__c/fields/Refund_Source_Order__c.field-meta.xml
<CustomField>
    <fullName>Refund_Source_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund_Source_Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Customer_Credits</relationshipLabel>
    <relationshipName>Customer_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>